# neo

./: .env.example  .gitignore  README.md
backend/: neo-server.spec  pyproject.toml  requirements-dev.txt  requirements.txt
backend/neo/: __init__.py  main.py  orchestrator.py  router.py  server.py  updater.py
backend/neo/automations/: safety.py  scheduler.py  suggestions.py  tool.py  watcher.py
backend/neo/llm/: claude.py  gemini.py  mock.py  ollama.py  openai_provider.py  provider.py  registry.py
backend/neo/memory/: db.py  models.py  schema.sql  seed.py  user_profile.json
backend/neo/plugins/: __init__.py  mcp_host.py  remotes.py  secrets.py  transports.py
backend/neo/skills/: github_import.py  loader.py  watcher.py
backend/neo/tools/: browser.py  calendar.py  excel.py  files.py  gmail.py  google_auth.py  manage_mcp.py  obsidian.py  open_app.py  paths.py  powerpoint.py  word.py
backend/neo/voice/: __init__.py  stt.py  tts.py
backend/tests/: conftest.py
backend/tests/unit/: test_browser.py  test_calendar.py  test_database.py  test_gemini.py  test_github_import.py  test_gmail.py  test_google_auth.py  test_init.py  test_manage_mcp.py  test_mcp_host.py  test_memory.py  test_ollama.py  test_open_app.py  test_openai_provider.py  test_openhands_plugin.py  test_orchestrator.py  test_remotes.py  test_roadmap_gaps.py  test_router.py  test_safety.py  test_scheduler.py  test_secrets.py  test_server.py  test_skills.py  test_skills_extended.py  test_stt.py  test_suggestions.py  test_tools.py  test_transports.py  (+3 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
(+53 files in other folders)
